--- a/index.html
+++ b/index.html
@@ -84,20 +84,23 @@
                     </div>
                     <!-- navbar -->
                     <!-- Hero Section -->
-                    <div class="hero  min-h-[calc(100vh-68px)] max-w-screen-xl mx-auto px-8 md:px-24 py-5 my-10">
+                    <div class="hero  min-h-[calc(100vh-68px)] max-w-screen-xl mx-auto">
                               <div class="hero-content flex-col lg:flex-row mx-auto">
                                         <div>
-                                                  <h1 class="text-3xl font-medium lg:text-7xl lg:font-extrabold">It's good <br>
+                                                  <h1
+                                                            class="text-3xl font-medium md:text-5xl md:font-extrabold lg:text-7xl">
+                                                            It's
+                                                            good <br>
                                                             tea time at The <br> Tea House</h1>
                                                   <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum
                                                             Satisfaction To Your Taste Buds.</p>
                                                   <button class="btn btn-primary">Explore More</button>
                                         </div>
                                         <div>
-                                                  <img src="./images/banner.png"
-                                                            class="max-w-sm" />
-                                                            <!-- Rating badge  -->
-                                                  <div class="-mt-20 flex items-center rounded-lg p-5 w-60 h-15 gap-4 bg-white drop-shadow-2xl">
+                                                  <img src="./images/banner.png" class="max-w-sm" />
+                                                  <!-- Rating badge  -->
+                                                  <div
+                                                            class="-mt-20 flex items-center rounded-lg p-5 w-60  h-15 gap-4 bg-white drop-shadow-2xl">
                                                             <i class="fa-solid fa-star text-3xl text-amber-300 "></i>
                                                             <div>
                                                                       <h3 class="text-3xl">5.00</h3>
@@ -109,7 +112,53 @@
                     </div>
                     <!-- Hero Section -->
           </header>
-          <main>
+          <main class="container mx-auto max-w-screen-xl px-8 py-5 my-10 ">
+                    <!-- featured section -->
+                    <section class="text-center my-24">
+                              <h2 class="text-3xl font-bold md:text-5xl md:font-extrabold mb-5">Our Featured Products
+                              </h2>
+                              <p class="max-w-4xl mx-auto">There are many variations of passages of Lorem Ipsum
+                                        available, but the majority have
+                                        suffered alteration in some form, by injected humour, or randomised words which
+                                        don't look even slightly believable. </p>
+                              <!-- featured tea card container -->
+                              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 my-12 mx-auto">
+                                        <!-- first card -->
+                                        <div class="card bg-gradient-to-r from-[#5A5A5A] to-[#5A5A5A] shadow-xl">
+                                                  <figure><img class="pt-5" src="./images/tea-3.png" alt="Shoes" /></figure>
+                                                  <div class="card-body">
+                                                            <h2 class="card-title mx-auto">Black Tea</h2>
+                                                            <p>Creamer could be replaced by fresh milk</p>
+                                                  </div>
+                                        </div>
+                                        <!-- second card -->
+                                        <div class="card bg-gradient-to-r from-[#5A5A5A] to-[#5A5A5A] shadow-xl">
+                                                  <figure><img class="pt-5" src="./images/tea-2.png" alt="Shoes" /></figure>
+                                                  <div class="card-body">
+                                                            <h2 class="card-title mx-auto">Milk Tea</h2>
+                                                            <p>Creamer could be replaced by fresh milk</p>
+                                                  </div>
+                                        </div>
+                                        <!-- third card -->
+                                        <div class="card bg-gradient-to-r from-[#5A5A5A] to-[#5A5A5A] shadow-xl">
+                                                  <figure><img class="pt-5" src="./images/tea-1.png" alt="Shoes" /></figure>
+                                                  <div class="card-body">
+                                                            <h2 class="card-title mx-auto">Lemon Tea</h2>
+                                                            <p>Creamer could be replaced by fresh milk</p>
+                                                  </div>
+                                        </div>
+                                        <!-- fourth card -->
+                                        <div class="card bg-gradient-to-r from-[#5A5A5A] to-[#5A5A5A] shadow-xl">
+                                                  <figure><img class="pt-5" src="./images/tea-4.png" alt="Shoes" /></figure>
+                                                  <div class="card-body">
+                                                            <h2 class="card-title mx-auto">Green Tea</h2>
+                                                            <p>Creamer could be replaced by fresh milk</p>
+                                                  </div>
+                                        </div>
+                              </div>
+                              <!-- featured tea card container -->
+                    </section>
+                    <!-- featured section -->
 
           </main>
           <footer>
