--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
                     <!-- navbar -->
                     <!-- Hero Section -->
                     <div class="hero  min-h-[calc(100vh-68px)] max-w-screen-xl mx-auto">
-                              <div class="hero-content flex-col lg:flex-row mx-auto">
-                                        <div>
+                              <div class="hero-content flex flex-col lg:flex-row mx-auto p-8">
+                                        <div class="flex-1">
                                                   <h1
                                                             class="text-3xl font-medium md:text-5xl md:font-extrabold lg:text-7xl">
                                                             It's
                                                             good <br>
                                                             tea time at The <br> Tea House</h1>
-                                                  <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum
+                                                  <p class="py-6 mx-auto">Tea and Botanical Solutions Supplier Give Optimum
                                                             Satisfaction To Your Taste Buds.</p>
                                                   <button class="btn btn-primary">Explore More</button>
                                         </div>
-                                        <div>
-                                                  <img src="./images/banner.png" class="max-w-sm" />
+                                        <div class="flex-1">
+                                                  <img src="./images/banner.png" class="flex-1" />
                                                   <!-- Rating badge  -->
                                                   <div
                                                             class="-mt-20 flex items-center rounded-lg p-5 w-60  h-15 gap-4 bg-white drop-shadow-2xl">
