--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <!-- Hero Section -->
           </header>
-          <main class="container mx-auto max-w-screen-xl px-8 py-5 my-10 ">
+          <main class="container mx-auto max-w-screen-xl px-8 pb-5 mb-10 ">
                     <!-- featured section -->
                     <section class="text-center my-24">
                               <h2 class="text-3xl font-bold md:text-5xl md:font-extrabold mb-5">Our Featured Products
