--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                     <!-- navbar -->
                     <!-- Hero Section -->
                     <div class="hero  min-h-[calc(100vh-68px)] max-w-screen-xl mx-auto">
-                              <div class="hero-content flex flex-col lg:flex-row mx-auto p-8">
-                                        <div class="flex-1">
+                              <div class="hero-content flex flex-col lg:flex-row p-8">
+                                        <div class="flex-1 content-center">
                                                   <h1
                                                             class="text-3xl font-medium md:text-5xl md:font-extrabold lg:text-7xl">
                                                             It's
@@ -114,7 +114,7 @@
           </header>
           <main class="container mx-auto max-w-screen-xl px-8 pb-5 mb-10 ">
                     <!-- featured section -->
-                    <section class="text-center my-24">
+                    <section class="text-center my-12 md:my-24">
                               <h2 class="text-3xl font-bold md:text-5xl md:font-extrabold mb-5">Our Featured Products
                               </h2>
                               <p class="max-w-4xl mx-auto">There are many variations of passages of Lorem Ipsum
