--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <!-- great tea fresh tea section -->
           </main>
           <!-- Footer -->
-          <footer class="footer max-w-screen-xl  mx-auto p-10 bg-base-200 text-base-content">
+          <footer class="footer max-w-screen-xl flex justify-normal  mx-auto p-10 bg-base-200 text-base-content">
                     <aside>
                               <svg width="50" height="50" viewBox="0 0 24 24"
                               xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
