--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
                               </div>
                               <div class="space-y-5 flex-1">
-                                        <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
+                                        <h3 class="text-3xl md:text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
                                         <p>The meaning of gong cha is chanese is to provide the best tea to emperor from
                                                   all possessions . It represents the highest quality and self
                                                   expectation. Establishing in 2006, Gong cha had been deeply
