--- a/index.html
+++ b/index.html
@@ -174,16 +174,19 @@
                                         <div class="rounded-xl  bg-gradient-to-r from-red-100 to-amber-100 h-32 "></div>
                                         <div
                                                   class="rounded-xl flex py-10 justify-center items-center bg-[#E6A6231A] row-span-2">
-                                                  <img src="./images/fresh-1.png" alt="tea"></div>
+                                                  <img src="./images/fresh-1.png" alt="tea">
+                                        </div>
                                         <div
                                                   class="rounded-xl flex py-10 justify-center items-center bg-[#574E391A] row-span-2">
-                                                  <img src="./images/fresh-2.png" alt=""></div>
+                                                  <img src="./images/fresh-2.png" alt="">
+                                        </div>
                                         <div class="rounded-xl bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF00] h-32  ">
                                         </div>
 
                               </div>
                               <div class="space-y-5 flex-1">
-                                        <h3 class="text-3xl md:text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
+                                        <h3 class="text-3xl md:text-5xl font-extrabold">Great Tea, Freshly <br>
+                                                  Presented</h3>
                                         <p>The meaning of gong cha is chanese is to provide the best tea to emperor from
                                                   all possessions . It represents the highest quality and self
                                                   expectation. Establishing in 2006, Gong cha had been deeply
@@ -200,39 +203,38 @@
                     <!-- great tea fresh tea section -->
           </main>
           <!-- Footer -->
-          <footer class="footer max-w-screen-xl flex justify-normal  mx-auto p-10 bg-base-200 text-base-content">
+          <!-- <footer class="footer max-w-screen-xl flex justify-normal  mx-auto p-10 bg-base-200 text-base-content">
                     <aside>
-                              <svg width="50" height="50" viewBox="0 0 24 24"
-                              xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
-                              clip-rule="evenodd" class="fill-current">
-                              <path
-                              d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
-                                                  </path>
-                                        </svg>
-                                        <p>Sylheti Tea Industries Ltd.<br />Providing reliable tech since 1992</p>
-                              </aside>
-                              <nav>
-                                        <header class="footer-title">Services</header>
-                                        <a class="link link-hover">Branding</a>
-                                        <a class="link link-hover">Design</a>
-                                        <a class="link link-hover">Marketing</a>
-                                        <a class="link link-hover">Advertisement</a>
-                              </nav>
-                              <nav>
-                                        <header class="footer-title">Company</header>
-                                        <a class="link link-hover">About us</a>
-                                        <a class="link link-hover">Contact</a>
-                                        <a class="link link-hover">Jobs</a>
-                                        <a class="link link-hover">Press kit</a>
-                              </nav>
-                              <nav>
-                                        <header class="footer-title">Legal</header>
-                                        <a class="link link-hover">Terms of use</a>
-                                        <a class="link link-hover">Privacy policy</a>
-                                        <a class="link link-hover">Cookie policy</a>
-                              </nav>
-                    </footer>
-                    <!-- Footer -->
-          </body>
+                              <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                                        fill-rule="evenodd" clip-rule="evenodd" class="fill-current">
+                                        <path
+                                                  d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
+                                        </path>
+                              </svg>
+                              <p>Sylheti Tea Industries Ltd.<br />Providing reliable tech since 1992</p>
+                    </aside>
+                    <nav>
+                              <header class="footer-title">Services</header>
+                              <a class="link link-hover">Branding</a>
+                              <a class="link link-hover">Design</a>
+                              <a class="link link-hover">Marketing</a>
+                              <a class="link link-hover">Advertisement</a>
+                    </nav>
+                    <nav>
+                              <header class="footer-title">Company</header>
+                              <a class="link link-hover">About us</a>
+                              <a class="link link-hover">Contact</a>
+                              <a class="link link-hover">Jobs</a>
+                              <a class="link link-hover">Press kit</a>
+                    </nav>
+                    <nav>
+                              <header class="footer-title">Legal</header>
+                              <a class="link link-hover">Terms of use</a>
+                              <a class="link link-hover">Privacy policy</a>
+                              <a class="link link-hover">Cookie policy</a>
+                    </nav>
+          </footer> -->
+          <!-- Footer -->
+</body>
 
-          </html>
+</html>
