--- a/index.html
+++ b/index.html
@@ -201,9 +201,10 @@
                               </div>
                     </section>
                     <!-- great tea fresh tea section -->
+
           </main>
           <!-- Footer -->
-          <!-- <footer class="footer max-w-screen-xl flex justify-normal  mx-auto p-10 bg-base-200 text-base-content">
+          <footer class="footer max-w-screen-xl flex justify-normal  mx-auto p-10 bg-base-200 text-base-content">
                     <aside>
                               <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                                         fill-rule="evenodd" clip-rule="evenodd" class="fill-current">
@@ -233,7 +234,7 @@
                               <a class="link link-hover">Privacy policy</a>
                               <a class="link link-hover">Cookie policy</a>
                     </nav>
-          </footer> -->
+          </footer>
           <!-- Footer -->
 </body>
 
