--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
                     </nav>
           </footer>
           <!-- Footer -->
+          <!-- Footer -->
+          <!-- Footer -->
 </body>
 
 </html>
