added super clients

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                                         </ul>
                               </div>
                               <div class="navbar-end">
-                                        <a class="btn">Profile</a>
+                                        <a class="btn">Get Started</a>
                               </div>
                     </div>
                     <!-- navbar -->
                     <!-- Hero Section -->
-                    <div class="hero  min-h-[calc(100vh-68px)] max-w-screen-xl mx-auto">
-                              <div class="hero-content flex flex-col lg:flex-row p-8">
-                                        <div class="flex-1 content-center">
+                    <div class="hero container max-w-screen-xl mx-auto">
+                              <div class="hero-content  flex flex-col mx-auto lg:flex-row p-8">
+                                        <div class="flex-1">
                                                   <h1
                                                             class="text-3xl font-medium md:text-5xl md:font-extrabold lg:text-7xl">
                                                             It's
@@ -99,13 +99,14 @@
                                                   <p class="py-6 mx-auto">Tea and Botanical Solutions Supplier Give
                                                             Optimum
                                                             Satisfaction To Your Taste Buds.</p>
-                                                  <button class="btn btn-primary">Explore More</button>
+                                                  <button class="btn flex justify-center btn-primary">Explore
+                                                            More</button>
                                         </div>
                                         <div class="flex-1">
-                                                  <img src="./images/banner.png" class="flex-1" />
+                                                  <img src="./images/banner.png" />
                                                   <!-- Rating badge  -->
                                                   <div
-                                                            class="-mt-20 ml-28 flex items-center rounded-lg p-5 w-60  h-15 gap-4 bg-white drop-shadow-2xl">
+                                                            class="-mt-20 flex items-center rounded-lg p-5 w-60  h-15 gap-4 bg-white drop-shadow-2xl">
                                                             <i class="fa-solid fa-star text-3xl text-amber-300 "></i>
                                                             <div>
                                                                       <h3 class="text-3xl">5.00</h3>
@@ -200,11 +201,39 @@
                                         </p>
                               </div>
                     </section>
-                    <!-- great tea fresh tea section -->
+                    <!-- super client  section -->
+                    <!-- super client  section -->
+                    <section class="flex flex-col lg:flex-row gap-14 my-12 lg:my-24 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-8 py-12 lg:px-16 lg:py-24 ">
+                              <div class="flex-1">
+                                        <h2 class="text-3xl font-bold lg:text-5xl lg:font-extrabold text-white mb-5">Meet Our Super <br> Clients</h2>
+                                        <p class="text-white mb-7">
+                                                  There are many variations of passages of Lorem Ipsum available, but
+                                                  the majority
+                                                  have suffered alteration in some form, by injected humour, or
+                                                  randomised words
+                                                  which don't look even slightly believable.
+                                        </p >
+                                        <button class="btn btn-active text-red-500">Show All</button>
+                              </div>
+                              <div class="flex-1">
+                                        <!-- Review -->
+                                        <div class="p-10 relative rounded-lg bg-white">
+                                                  <img class="absolute -left-5 -top-5" src="./images/client.png" alt="">
+                                                  <p>
+                                                            We are providing the best and suitable home insurance
+                                                            services for the people who are interested to treatment
+                                                  </p>
+                                                  <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                                                  <p class="font-medium">Businessman</p>
+                                        </div>
+                              </div>
+
+                    </section>
+                    <!-- super client  section -->
 
           </main>
           <!-- Footer -->
-          <footer class="footer max-w-screen-xl flex justify-normal  mx-auto p-10 bg-base-200 text-base-content">
+          <footer class="footer flex justify-normal  mx-auto p-10 bg-base-200 text-base-content">
                     <aside>
                               <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                                         fill-rule="evenodd" clip-rule="evenodd" class="fill-current">
@@ -235,8 +264,6 @@
                               <a class="link link-hover">Cookie policy</a>
                     </nav>
           </footer>
-          <!-- Footer -->
-          <!-- Footer -->
           <!-- Footer -->
 </body>
 
